--- a/renovation/src/views/components/footer/footer.pug
+++ b/renovation/src/views/components/footer/footer.pug
@@ -1,2 +1,43 @@
 footer
-    p this is footer
+    .bgr_contact_footer
+        .boreder_contact_footer
+            p
+                span.span_title WE CAN HELP BUILD YOUR PROJECT!
+            p
+                span.span_content TELL US ABOUT YOUR PROJECT
+            p
+                a.btn_contact_us(href="")
+                    span Contact us
+    .wrapper_footer
+        .container 
+            .row
+                .col-xs-12.col-sm-3.col-md-3.col-lg-3
+                    .column_footer
+                        .footer_title address
+                        .footer_content 
+                            | 42 Morningview Lane
+                            br 
+                            | New York, NY 1001
+                .col-xs-12.col-sm-3.col-md-3.col-lg-3
+                    .column_footer
+                        .footer_title phone
+                        .footer_content (123) 456-7890
+                .col-xs-12.col-sm-3.col-md-3.col-lg-3
+                    .column_footer
+                        .footer_title email
+                        .footer_content no-reply@envato.com
+                .col-xs-12.col-sm-3.col-md-3.col-lg-3
+                    .column_footer
+                        .footer_title follow us
+                        .social_icon
+                            ul
+                                li.social_icon_facebook
+                                    a(href="##")
+                                li.social_icon_twitter
+                                    a(href="#")
+                                li.social_icon_houzz
+                                    a(href="#")
+                                li.social_icon_yelp
+                                    a(href="#")
+                                li.social_icon_pinterest
+                                    a(href="#")
