--- a/renovation/src/views/components/header/header.scss
+++ b/renovation/src/views/components/header/header.scss
@@ -4,19 +4,59 @@ body {
 a {
   list-style: none;
 }
-
+//-------------------------class chung---------------
+//li trên menu mobile
+.li_menu {
+  display: block;
+  width: 100%;
+}
+//a trên menu mobile
+.a_link_menu {
+  color: #444444;
+  text-transform: uppercase;
+  font-size: 14px;
+  border: none;
+  width: 100%;
+  display: block;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+//li trên menu destop
+.li_menu_destop {
+  display: inline-block;
+}
+//thẻ a trên menu destop
+.a_menu_destop {
+  color: rgba(255, 255, 255, 0.72);
+  padding: 45px 18px;
+  text-transform: uppercase;
+  line-height: 16px;
+  letter-spacing: 0.75px;
+  display: block;
+  cursor: pointer;
+}
+//thẻ span trong thẻ a trên menu destop
+.span_before_a_menu_destop {
+  content: "";
+  width: 100%;
+  position: absolute;
+  bottom: -6px;
+  height: 2px;
+  background: #f6c427;
+}
+//-------------------------------------------------
 .bgr_header {
   background-color: #252636;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-  
+  font-family: fonts(pTSansNarrow);
+
   .width_container {
     position: relative;
     width: 92%;
     padding: 0px;
     margin: 0 auto;
-    height: 106px;
+    height: 106.67px;
     z-index: 5;
 
     .logo_web {
@@ -40,11 +80,12 @@ a {
       position: absolute;
       right: 1.5rem;
       height: 100%;
-      @include min-md{
+      @include min-md {
         display: none;
       }
 
-      .mobile_menu_icon, .mobile_menu_icon_x {
+      .mobile_menu_icon,
+      .mobile_menu_icon_x {
         float: right;
         margin-right: 1.5rem;
       }
@@ -68,30 +109,176 @@ a {
       }
     }
 
-    .wrap_grid_menu{
+    .wrap_grid_menu_left {
+      @media (max-width: #{breakpoints(md)}) {
+        display: none;
+      }
+
       width: 49%;
       display: inline-block;
+      margin-right: 1%;
+
+      .grid_menu_left {
+        padding-right: 74px;
+        .nav_container_left {
+          .menu_left {
+            ul.menu_left_lv1 {
+              text-align: right;
+              .li__shop:hover .menu_left_lv2{
+                opacity: 1;
+                margin-top: 0;
+              }
+              >li {
+                @extend .li_menu_destop;
+                position: relative;
+                
+                &:first-child>a {
+                  color: #fff;
+                    background-color: #212230;
+                }
+                &:first-child a span::before {
+                  @extend .span_before_a_menu_destop;
+                  opacity: 1;
+                }
+                >a {
+                  @extend .a_menu_destop;
+                  >span {
+                    position: relative;
+                    font-family: fonts(pTSansNarrow);
+                  }
+                  span::before {
+                    @extend .span_before_a_menu_destop;
+                    opacity: 0;
+                    transition: opacity 0.2s ease;
+                    
+                  }
+                  &:hover {
+                    color: #fff;
+                    background-color: #212230;
+                  }
+                  &:hover span::before {
+                    opacity: 1;
+                    margin-top: 0;
+                  }
+                  
+                  span.span_icon_shop {
+                    &:after {
+                      font-weight: normal;
+                      font-style: normal;
+                      font-family: 'FontAwesome';
+                      border: none;
+                      content: "\f107";
+                      font-size: 12px;
+                      padding-left: 4px;
+                    }
+                  }
+                }
+                .menu_left_lv2{
+                  position: absolute;
+                  width: 187px;
+                  margin-top: 26px;
+                  opacity: 0;
+                  transition: all .3s ease;
+                  z-index: 100;
+
+                  li{
+                    text-align: left;
+                    background: rgba(0,0,0, 0.04);
+                    &:hover{
+                      background: #fff;
+                    }
+                    &:hover a{
+                      color: #000;
+                    }
+                    
+                    a{
+                      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+                      padding: 19px 3rem 19px 26px;
+                      text-transform: capitalize;
+                      display: block;
+                      color: #757575;
+                      font-size: 14px;
+
+                      span.icon_account:before {
+                        font-family: "Fontawesome";
+                        content: "\f2bd";
+                        padding-right: 4px;
+                      }
+        
+                      span.icon_cart:before {
+                        font-family: "Fontawesome";
+                        content: "\f07a";
+                        padding-right: 4px;
+                      }
+        
+                      span.icon_checkout:before {
+                        font-family: "Fontawesome";
+                        content: "\f09d";
+                        padding-right: 4px;
+                      }
+                    }
+                  }
+                }
+              }
+              
+            }
+          }
+        }
+      }
+    }
+    .wrap_grid_menu_right {
+      @media (max-width: #{breakpoints(md)}) {
+        display: none;
+      }
+
+      width: 49%;
+      display: inline-block;
+      margin-left: 1%;
+
+      .grid_menu_right {
+        padding-left: 74px;
+        .nav_container_right {
+          .menu_right {
+            ul.menu_right_lv1 {
+              text-align: left;
+              li {
+                @extend .li_menu_destop;
+                a {
+                  @extend .a_menu_destop;
+                  span {
+                    position: relative;
+                    font-family: fonts(pTSansNarrow);
+                  }
+                  span::before {
+                    content: "";
+                    opacity: 0;
+                    transition: opacity 0.2s ease;
+                    width: 100%;
+                    position: absolute;
+                    bottom: -6px;
+                    height: 2px;
+                    background: #f6c427;
+                  }
+                  &:hover {
+                    color: #fff;
+                    background-color: #212230;
+                  }
+                  &:hover span::before {
+                    opacity: 1;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
-//class chung cho các thẻ li trên menu
-.li_menu {
-  display: block;
-  width: 100%;
-}
-//class chung cho thẻ a trên menu
-.a_link_menu {
-  color: #444444;
-  text-transform: uppercase;
-  font-size: 14px;
-  border: none;
-  width: 100%;
-  display: block;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
 .wrapp_menu_mobile {
   width: 100%;
-  @include min-md{
+  
+  @include min-md {
     display: none;
   }
   .menu_mobile {
@@ -108,9 +295,10 @@ a {
         a.link_menu_lv1 {
           @extend .a_link_menu;
           padding: 16px 1.5rem;
+          font-family: fonts(pTSansNarrow);
         }
         span.btn_menu_lv2 {
-          width: 50px;          
+          width: 50px;
           background: #e8e8e8;
           text-align: center;
           padding: 16px 0;
@@ -119,38 +307,41 @@ a {
           right: 0;
           //transform: rotate(180deg)
         }
-        span.btn_menu_lv2:after{
-            font-family: "Fontawesome";
-            content: "\F107";
-            color: rgba(0, 0, 0, 0.28);
+        span.btn_menu_lv2:after {
+          font-family: "Fontawesome";
+          content: "\F107";
+          color: rgba(0, 0, 0, 0.28);
         }
         ul.ul_menu_lv2 {
           width: 100%;
           overflow: hidden;
           height: 0;
-          transition: height .3s ease;
-          
-  
+          transition: height 0.3s ease;
+
           li.menu_lv2 {
             @extend .li_menu;
-            background: rgba(0,0,0, 0.04);
-  
+            background: rgba(0, 0, 0, 0.04);
+
             a.link_menu_lv2 {
               @extend .a_link_menu;
               padding: 16px 3rem;
-  
+              
+              span{
+                font-family: fonts(pTSansNarrow);
+              }
+
               span.icon_account:before {
                 font-family: "Fontawesome";
                 content: "\f2bd";
                 padding-right: 4px;
               }
-  
+
               span.icon_cart:before {
                 font-family: "Fontawesome";
                 content: "\f07a";
                 padding-right: 4px;
               }
-  
+
               span.icon_checkout:before {
                 font-family: "Fontawesome";
                 content: "\f09d";
