--- a/adaptis-master/src/views/pages/homepage.pug
+++ b/adaptis-master/src/views/pages/homepage.pug
@@ -1,7 +1,7 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - home
+  title UX and Digital Agency with locations in Vietnam, Switzerland, Australia, and Thailand | Adaptis
 
 block basicSeo
   meta(name='description' content='home page')
@@ -9,7 +9,6 @@ block basicSeo
   meta(name='author' content='')
 
 block content
-
   //- Desktop page
-  section.page.
+  include ../components/highlight_block/highlight_block.pug
   
