--- a/adaptis-master/src/assets/styles/_app-JP.scss
+++ b/adaptis-master/src/assets/styles/_app-JP.scss
@@ -9,6 +9,9 @@
 @import './base/_global';
 @import './base/_flexboxgrid';
 @import './base/_lazyload';
+@import './base/_animate';
 
 // Component
 @import '../../views/components/header/header';
+@import '../../views/components/footer/footer';
+@import '../../views/components/highlight_block/highlight_block';
