--- a/adaptis-master/src/assets/styles/base/_flexboxgrid.scss
+++ b/adaptis-master/src/assets/styles/base/_flexboxgrid.scss
@@ -3,8 +3,8 @@
 .container-fluid {
     margin-right: auto;
     margin-left: auto;
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
+    padding-right: 15px;
+    padding-left: 15px;
     width: 100%;
 }
 
@@ -251,14 +251,14 @@
 
 @media only screen and (min-width: breakpoints(sm)) {
     .row {
-        margin-right: -2rem;
-        margin-left: -2rem;
+        // margin-right: -2rem;
+        // margin-left: -2rem;
     }
 
     .container-fluid {
-        width: 75rem;
-        padding-right: 2rem;
-        padding-left: 2rem;
+        // width: 75rem;
+        // padding-right: 2rem;
+        // padding-left: 2rem;
     }
 
     .col-sm,
@@ -473,7 +473,7 @@
 
 @media only screen and (min-width: breakpoints(md)) {
     .container-fluid {
-        width: 98rem;
+        // width: 98rem;
     }
 
     .col-md,
