--- a/adaptis-master/src/views/components/footer/footer.pug
+++ b/adaptis-master/src/views/components/footer/footer.pug
@@ -1,2 +1,53 @@
 footer
-    p this is footer
+    div.footer-general
+        div.container
+            div.logo 
+                    a(href="index.html") ADAPTIS
+            nav.footer-menu
+                ul
+                    li
+                        a(href="the_work") THE WORK
+                    li
+                        a(href="the_agency") THE AGENCY
+                    li
+                        a(href="#") CAREERS
+                    li
+                        a(href="contact") CONTACT US
+            div.row 
+                div.col-xs-6.col-sm-3
+                    div.footer-iems
+                        div.clock
+                            img(src="../../../assets/images/clock.png", alt="clock")
+                        p.location AUSTRALIA
+                        p.phone
+                            a(href="tel:61287763833") +61 2 8776 3833
+                        p.email
+                            a(href="mailto:australia@adaptis.io") AUSTRALIA@ADAPTIS.IO
+                div.col-xs-6.col-sm-3
+                    div.footer-iems
+                        div.clock
+                            img(src="../../../assets/images/clock.png", alt="clock")
+                        p.location SWITZERLAND
+                        p.phone
+                            a(href="tel:41225391632") +41 22 539 16 32
+                        p.email
+                            a(href="mailto:switzerland@adaptis.io") SWITZERLAND@ADAPTIS.IO
+                div.col-xs-6.col-sm-3
+                    div.footer-iems
+                        div.clock
+                            img(src="../../../assets/images/clock.png", alt="clock")
+                        p.location THAILAND
+                        p.phone
+                            a(href="tel:6625088443") +66 2 508 8443
+                        p.email
+                            a(href="mailto:thailand@adaptis.io") THAILAND@ADAPTIS.IO
+                div.col-xs-6.col-sm-3
+                    div.footer-iems
+                        div.clock
+                            img(src="../../../assets/images/clock.png", alt="clock")
+                        p.location VIETNAM
+                        p.phone
+                            a(href="tel:842444582079") +84 244 4582 079
+                        p.email
+                            a(href="mailto:vietnam@adaptis.io") VIETNAM@ADAPTIS.IO
+    
