--- a/adaptis-master/src/views/index.pug
+++ b/adaptis-master/src/views/index.pug
@@ -1,14 +1,14 @@
-extends ./layouts/master.pug
+//- extends ./layouts/master.pug
 
 block title
-  title My Page - Index
+  title Adaptis
 
 block content
-  - var pages = { homePage: '/homepage', testPage: '/test'  }
+  - var pages = { Homepage: '/homepage', TheWork: '/the_work' , TheAgency: 'the_agency', Contact: 'contact' }
 
   //- Desktop page
   section.page.home__page
-    h1.page__title # Index page3
+    h1.page__title Navigation
 
     ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
       each val, index in pages
