--- a/adaptis-master/src/views/layouts/master.pug
+++ b/adaptis-master/src/views/layouts/master.pug
@@ -35,7 +35,7 @@ html(lang='jp')
 
 
     //- Favicons
-    link(rel='shortcut icon', href=require('images/favicons/favicon.ico'))
+    link(rel='shortcut icon', href=require('images/favicons/favicon.png'))
 
     //- Fonts
     //- link(href="https://fonts.googleapis.com/css?family=Quicksand", rel='stylesheet')
