--- a/adaptis-master/src/views/pages/the_agency.pug
+++ b/adaptis-master/src/views/pages/the_agency.pug
@@ -1,7 +1,7 @@
 extends ../layouts/master.pug
 
 block title
-  title My Page - Index
+  title UX and Development Agency | Adaptis
 
 block content
-    h1 Hello
+    h1 agency
