--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -5,6 +5,8 @@
 @import './base/_functions';
 @import './base/_variables';
 @import './base/_mixins';
+@import '../../../node_modules/slick-carousel/slick/slick.css';
+@import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
 @import './base/_fonts';
 @import './base/_global';
 @import './base/_flexboxgrid';
