--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -25,7 +25,8 @@ $fonts: (
     icomoon: ('icomoon'),
     fontawesome: ('Fontawesome'),
     hel: ('Helvetica_Neue', sans-serif),
-    hel-medium : ('Helvetica',sans-serif)
+    hel-light : ('Helvetica',sans-serif),
+    kings-caslon : ('KingsCaslon',sans-serif)
 );
 
 $font-main: fonts(main);
@@ -33,7 +34,8 @@ $font-heading: fonts(heading);
 $font-icomoon: fonts(icomoon);
 $font-fontawesome: fonts(fontawesome);
 $font-hel: fonts(hel);
-$font-hel-medium: fonts(hel-medium);
+$font-hel-light: fonts(hel-light);
+$font-kings-caslon: fonts(kings-caslon);
 $fontweight-light: fontWeight(light);
 $fontweight-regular: fontWeight(regular);
 $fontweight-medium: fontWeight(medium);
@@ -44,6 +46,7 @@ $fz-root: 62.5%; // root font-size, DO NOT CHANGE
 $gutter: 2rem;
 $gutter-xs: 1.5rem;
 $gutter-md: 2rem;
+$container: 75.6%;
 
 // colors
 $colors: (
