--- a/Nhom4_Kempinki/src/views/components/footer/footer.scss
+++ b/Nhom4_Kempinki/src/views/components/footer/footer.scss
@@ -1,20 +1,20 @@
 $text_fontsize: 12px;
-$container: 75.6%;
 $li_size: 12px;
-$width_icon: 32px;
-$height_icon: 32px;
+$width_icon: 31px;
+$height_icon: 31px;
 @mixin transition_border {
   a {
     letter-spacing: 0.1px;
     top: 1px;
-    font-size: $li_size;
+    font-size: 11px;
     position: relative;
     font-weight: 100;
     margin-left: 3px;
+    font-family: $font-hel-light;
     &:before {
       content: "";
       position: absolute;
-      bottom: 0px;
+      bottom: -1px;
       left: 0;
       width: 0;
       height: 1px;
@@ -27,22 +27,19 @@ $height_icon: 32px;
   }
 }
 footer {
+  // margin-bottom: 20px;
   width: 100%;
   // height: 500px;
   background: $bg-color;
-  .mg {
-    margin-top: 50px;
-  }
   .container {
     width: $container;
     margin: 0 auto;
     font-family: $font-hel;
-    margin-top: 50px;
     h3 {
       font-size: $text_fontsize;
-      font-family: $font-hel;
+      font-family: $font-hel-light;
       color: $text_color;
-      margin-top: 50px;
+      margin-top: 47px;
       margin-bottom: 8px;
       letter-spacing: 2px;
       font-size: $text_fontsize;
@@ -54,7 +51,7 @@ footer {
         font-size: $li_size;
         font-weight: 100;
         word-wrap: break-word;
-        &:hover{
+        &:hover {
           text-decoration: underline;
         }
       }
@@ -67,8 +64,8 @@ footer {
       display: flex;
       flex-wrap: wrap;
       .icon_link {
-        margin-right: 10px;
-        margin-bottom: 15px;
+        margin-right: 6px;
+        margin-bottom: 14px;
         font-size: $li_size;
         width: $width_icon;
         height: $height_icon;
@@ -115,11 +112,13 @@ footer {
     }
     .aboutus {
       ul {
-        margin-top: 20px;
+        margin-top: 10px;
         li {
           padding: 0;
           position: relative;
           margin-left: 25px;
+          line-height: 21px;
+          // font-size: 11px;
           @include transition_border;
           &:before {
             content: url("https://www.kempinski.com/images/icon/bullet_v2.png");
@@ -133,20 +132,25 @@ footer {
     .signup {
       margin-top: 15px;
       .subcribe {
+        font-size: 11px;
         margin-top: 5px;
-        padding: 15px 80px;
+        padding: 11px 75px;
         background: $text-color;
+        border: 2px solid $text-color;
         color: white;
         font-weight: bold;
         letter-spacing: 1.3px;
+        &:hover{
+          background: $bg-color;
+        }
       }
       img {
-        margin-top: 40px;
-        width: 88%;
+        margin-top: 35px;
+        width: 84%;
       }
       p {
         color: $text-color;
-        margin-top: 10px;
+        margin-top: 6px;
         font-size: 12px;
         font-weight: 100;
         text-transform: uppercase;
@@ -157,7 +161,7 @@ footer {
   .footer-backtoptop {
     display: flex;
     margin-top: 50px;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
     align-items: center;
     justify-content: center;
     a {
@@ -168,3 +172,21 @@ footer {
     }
   }
 }
+
+// footer {
+//   .container {
+//     @media screen and (max-width: #{breakpoints(xl)}) {
+//       width: 95%;
+//     }
+//     text-align: center;
+//     .icon{
+//       justify-content: center;
+//     }
+//     .booking_item{
+//       ul{
+//         display: flex;
+//         justify-content: center;
+//       }
+//     }
+//   }
+// }
