--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -55,7 +55,7 @@ $colors: (
     c-gray: #e5ebee,
     c-gray-1: #ddd,
     c-pink-light: #EBCCD1,
-    c-red: #A94442,
+    c-red: #A94442
 );
 // // main-colors:
 $bg-color-primary: color(c-blue);
