--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -52,9 +52,11 @@ html(lang='jp')
 
     //- block content
     block content
-
+    include ../components/homepage/experiences/experiences.pug
+    include ../components/homepage/gallery/gallery.pug
+    include ../components/homepage/specialoffers/specialoffers.pug
+    
     include ../components/footer/footer.pug
-
     //- block scripts
     block scripts
 
