--- a/Nhom4_Kempinki/src/assets/styles/_app.scss
+++ b/Nhom4_Kempinki/src/assets/styles/_app.scss
@@ -6,6 +6,10 @@
 @import './base/_variables';
 @import './base/_mixins';
 @import './base/_fonts';
+@import '../../../node_modules/slick-carousel/slick/slick.css';
+@import '../../../node_modules/slick-carousel/slick/slick-theme.scss';
+@import './base/animate.css';
+@import './base/jquery.fancybox.min.css';
 @import './base/_global';
 @import './base/_flexboxgrid';
 @import './base/_lazyload';
@@ -13,3 +17,6 @@
 // Component
 @import '../../views/components/header/header';
 @import '../../views/components/footer/footer';
+@import '../../views/components/homepage/experiences/experiences';
+@import '../../views/components/homepage/gallery/gallery';
+@import '../../views/components/homepage/specialoffers/specialoffers';
