--- a/Nhom4_Kempinki/src/assets/styles/base/_global.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_global.scss
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+    margin: 0;
+    padding: 0;
     font-size: 1.6rem;
     font-weight: fontWeight(regular);
     color: $text-color-primary;    
