--- a/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
+++ b/Nhom4_Kempinki/src/assets/styles/base/_variables.scss
@@ -19,23 +19,24 @@ $font-weight: (
 );
 
 $fonts: (
-    main: ("Roboto",sans-serif),
-    heading: ('Kreon', sans-serif),
-    content: ('ProximaNova', sans-serif),
+    main: ("Helvetica",sans-serif),
+    kingscalson: ("KingsCalsonItalic",Arial,sans-serif),
     icomoon: ('icomoon'),
     fontawesome: ('Fontawesome'),
-    hel: ('Helvetica_Neue', sans-serif),
-    hel-light : ('Helvetica',sans-serif),
-    kings-caslon : ('KingsCaslon',sans-serif)
+    arial: ('Arial'),
+    helvelticaBold: ('Helvetica-bold'),
+    helvelticaRegular: ('Helvetica-Regular')
 );
 
 $font-main: fonts(main);
-$font-heading: fonts(heading);
+$font-helvelticaBold: fonts(helvelticaBold);
+$font-helvelticaRegular: fonts(helvelticaRegular);
+$font-kingscalson: fonts(kingscalson);
 $font-icomoon: fonts(icomoon);
 $font-fontawesome: fonts(fontawesome);
-$font-hel: fonts(hel);
-$font-hel-light: fonts(hel-light);
-$font-kings-caslon: fonts(kings-caslon);
+$font-arial: fonts(arial);
+$font-icomoon: fonts(icomoon);
+
 $fontweight-light: fontWeight(light);
 $fontweight-regular: fontWeight(regular);
 $fontweight-medium: fontWeight(medium);
