--- a/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
+++ b/Nhom4_Kempinki/src/views/components/homepage/gallery/gallery.pug
@@ -38,9 +38,9 @@
 #anasalali.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -60,15 +60,17 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")
+                        img(src="../../../../assets/images/anasanali.jpg", alt="anasanali")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
 #bernabetv.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -88,15 +90,17 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")
+                        img(src="../../../../assets/images/bernabetv.jpg", alt="bernabetv")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
 #tourismsa.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -116,15 +120,17 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")
+                        img(src="../../../../assets/images/tourismsa.jpg", alt="seychellestourismsa")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
 #grotesque.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -144,15 +150,17 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")
+                        img(src="../../../../assets/images/grotesque.jpg", alt="anny_grotesque")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
 #dubai.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -172,15 +180,17 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")
+                        img(src="../../../../assets/images/dubai.jpg", alt="brasileiros_em_dubai")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
 #kandaclub.gallery-slide2
     .container-fluid
         .row
-            .col-lg-7
+            .col-lg-7.col-photo
                 img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
-                a(class="report-image ", title="Report photo?") 
+                a(href="", class="report-image ", title="Report photo?") 
             .col-lg-5
                 .user
                     a(href="")
@@ -200,6 +210,8 @@
                             a(href=""): i.fa.fa.fa-pinterest-p
                 h3 Book This Hotel Now
                 .hotel-info
-                    img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
-                    p  hotel california
-                p.photo-copy Powered by Olapic
+                    a(href="")  
+                        img(src="../../../../assets/images/kandaclub.jpg", alt="kandaclub")
+                        p  Hotel california hotel california
+                a(href="")
+                    p.photo-copy Powered by Olapic
