--- a/Nhom4_Kempinki/src/views/components/footer/footer.scss
+++ b/Nhom4_Kempinki/src/views/components/footer/footer.scss
@@ -18,13 +18,16 @@ $height_icon: 31px;
       left: 0;
       width: 0;
       height: 1px;
-      background: $text-color;
-      transition: 0.3s;
+      background: $text-color-footer;
+      transition: 0.2s;
     }
     &:hover:before {
       width: 100%;
     }
   }
+}
+html{
+  scroll-behavior: smooth;
 }
 footer {
   // margin-bottom: 20px;
@@ -38,7 +41,7 @@ footer {
     h3 {
       font-size: $text_fontsize;
       font-family: $font-hel-light;
-      color: $text_color;
+      color: $text-color-footer;
       margin-top: 47px;
       margin-bottom: 8px;
       letter-spacing: 2px;
@@ -58,7 +61,7 @@ footer {
     }
     a {
       font-size: $li_size;
-      color: $text_color;
+      color: $text-color-footer;
     }
     .icon {
       display: flex;
@@ -82,7 +85,7 @@ footer {
         margin-right: 0;
       }
       .blog {
-        background: $text_color url("https://www.kempinski.com/images/icon/blog-w.png");
+        background: $text-color-footer url("https://www.kempinski.com/images/icon/blog-w.png");
         background-size: 16px;
         background-position: center center;
         background-repeat: no-repeat;
@@ -102,7 +105,7 @@ footer {
             margin-top: 15px;
             margin-left: 10px;
             span {
-              color: $text-color;
+              color: $text-color-footer;
               margin: 3px 2px 0 6px;
               font-size: 12px;
             }
@@ -135,8 +138,8 @@ footer {
         font-size: 11px;
         margin-top: 5px;
         padding: 11px 75px;
-        background: $text-color;
-        border: 2px solid $text-color;
+        background: $text-color-footer;
+        border: 2px solid $text-color-footer;
         color: white;
         font-weight: bold;
         letter-spacing: 1.3px;
@@ -149,7 +152,7 @@ footer {
         width: 84%;
       }
       p {
-        color: $text-color;
+        color: $text-color-footer;
         margin-top: 6px;
         font-size: 12px;
         font-weight: 100;
